[tool.poetry]
name = "pro-peak"
version = "0.1.0"
description = ""
authors = ["Raymond <raymond.w.lang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.79"
dropbox = "^11.35.0"
email-validator = "^1.3.0"
fastapi = "^0.85.1"
kink = "^0.6.5"
mypy-boto3-s3 = "^1.24.76"
mypy-boto3-ses = "^1.24.36.post1"
mypy-boto3-sns = "^1.24.68"
pymongo = "^4.2.0"
python = "^3.10"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
ipython = "^8.5.0"
isort = "^5.10.1"
moto = "^4.0.8"
mypy = "^0.982"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
toml-sort = "^0.20.1"

[tool.pylint.BASIC]
good-names = "id,i,j,k"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
