[tool.poetry]
name = "pro-peak"
packages = [{include = "src"}]
version = "0.1.0"
description = ""
authors = ["Raymond <raymond.w.lang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.79"
dropbox = "^11.36.2"
email-validator = "^2.1.0.post1"
fastapi = "^0.104.1"
kink = "^0.7.0"
pymongo = "^4.6.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
black = "^23.10.1"
flake8 = "^6.1.0"

[tool.pylint.BASIC]
good-names = "id,i,j,k"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
